@@ -140,7 +140,8 @@ public class SimpleGenericRelationEnvironment implements IPluginEnvironment
 	SimpleRhinoWrapper tmpWrapper =  PluginEnvironmentUtils.initializeWrapper( args.get( this.javascriptStr ), objectList );
 
 	// Validating function entries:
-	// \todo: create this validation
+	if ( ! tmpWrapper.validateJavascriptFunction( args.get(this.entryFuncStr) ) )
+	    throw new PluginException( String.format( "Could not use %s as function in javascript", args.get(this.entryFuncStr) ) );
 
 	log.info("Validating Arguments - End");
     }
