@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11108] "Der skal laves en funktion til validering af at en funktion findes i et javascript."
    - bug [11076] "Samling af valideringsfunktionalitet for plugins"
    - bug [11104] "NaiveJavaScriptWrapper ser ikke ud til at blive brugt længere"
    - bug [10507] "PluginClassLoader virker overflødig"
